--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"dependencies": {
 		"fs": "0.0.1-security",
-		"mysql": "^2.18.1",
+		"mysql2": "^3.9.2",
 		"nodemon": "^3.1.0",
 		"puppeteer": "^22.3.0"
 	}
